# rosemary

./: .editorconfig  .env  .gitignore  .pymarkdown.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  GEMINI.md  Makefile  README.md  SECURITY.md  SKILL.md  flake.nix  go.mod  main.go  mise.toml  pyproject.toml  rosemary.db
.agents/: CONTEXT.md  CURRENT_TASK.md  MEMORY.md
.claude/rules/: core.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
benches/: graph.rs
cmd/: gelbooru.go  root.go
data/lancedb/chunks.lance/_transactions/: 0-297ae34c-f531-49b9-89f0-cc3d6dbc2549.txn  1-d27d5ed8-a3c1-4b9a-9946-3d1c6f357a08.txn  10-00f819f1-8d05-4764-af9d-ffc3db549954.txn  11-b5ee26c3-68e4-4079-8fef-e6d01762cb21.txn  12-83523a13-451d-4c1e-b0bc-9a85fe6b0b49.txn  2-8276c365-93d9-4b16-9869-9b9e3e395c77.txn  3-200157d8-5d0a-4e01-b4d9-3a5b042f6753.txn  4-a9e3cfce-443c-4938-b039-ef5f6ffd2c66.txn  5-12ca6e55-1b2e-4c64-97f2-7cf5bd823f26.txn  6-f909326b-1af1-40fc-a290-5e2675ebe199.txn  7-5fa7b896-7fd6-4acf-84b6-c93cd5548719.txn  8-f1185094-26e6-44f2-9e43-d7c697bba39f.txn  9-13e487b8-4f96-45ff-a9a0-691af824648a.txn
docs/: CHANGELOG.md  architecture.md  usage.md
docs/benchmarks/: 2026-05-21-graph-search-baseline.md
docs/plans/: 2026-03-03-kb-v0-2-0-design.md  2026-03-03-kb-v0-2-0-impl.md  2026-03-03-knowledge-base-design.md  2026-03-03-rosemary-kb-v0-1-0.md  2026-04-08-async-masterclass-plan.md  2026-05-20-mcp-knowledge-graph-design.md  2026-05-20-mcp-knowledge-graph-plan.md
docs/specs/: 2026-04-08-async-masterclass-design.md
docs/tasks/: 2026-04-08-async-masterclass-tasks.jsonl
examples/: client_framed.rs  graceful_shutdown.rs  grpc_client.rs  grpc_server.rs  my_lifecycle.rs  my_trait.rs  no_pin.rs  read_file.rs  run_future.rs  send_http.rs  server_framed.rs  sqlx_sqlite.rs  sqlx_sqlite.rs.bak  tokio_actor.rs
kb/topics/: rust-memory-layout.md  rust-test-isolation.md
model/: gelbooru.go
proto/: hello.proto
scripts/: example.py  verify_cli.py
src/: chunk.rs  compact.rs  db.rs  digest.rs  ingest.rs  kb.rs  lib.rs  main.rs  mcp.rs  normalize.rs  normalize_test.rs  observability.rs  paths.rs  recall.rs  shutdown.rs  tui.rs  vector.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/common/: atomics.rs  mod.rs  readme.md  samples.rs
src/embed/: fastembed_provider.rs  mod.rs
src/queue/: mod.rs  tests.rs
src/tests/: async_basics.rs  mod.rs
tests/: expansion_test.rs  graph_edge_cases.rs  normalization_test.rs  verbose_tool_test.rs
