[package]
name = "rosemary"
version = "0.2.0"
edition = "2024"

[dependencies]
# Core & Observability
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tokio-util = { version = "0.7", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

# CLI & KB
clap = { version = "4.5", features = ["derive"] }
slug = "0.1"
dotenvy = "0.15"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"

# Chunking & Embedding
text-splitter = { version = "0.29", features = ["tiktoken-rs"] }
fastembed = "5"
tiktoken-rs = "0.9.1"

# Database & Vector Store
libsql = "0.6"
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"
# sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

# gRPC & Proto
tonic = "0.12"
prost = "0.13"

# Async Utilities & Learning Examples
async-task = "4.7"
futures-lite = "2.6"
flume = "0.11"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
filetime = "0.2"
