[package]
name = "rosemary"
version = "0.2.0"
edition = "2024"

[features]
default = []
documents = [
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:fastembed",
    "dep:futures",
    "dep:lancedb",
    "dep:text-splitter",
    "dep:tiktoken-rs",
    "dep:walkdir",
]

[dependencies]
# Core
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }
slug = "0.1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
walkdir = { version = "2", optional = true }
directories = "6"
toml = "0.8"

# Chunking & Embedding
text-splitter = { version = "0.29", features = ["tiktoken-rs"], optional = true }
fastembed = { version = "5", optional = true }
tiktoken-rs = { version = "0.9.1", optional = true }

# Database & Vector Store
libsql = "0.6"
lancedb = { version = "0.26", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }

[dev-dependencies]
filetime = "0.2"
tempfile = "3"

[[bench]]
name = "graph"
harness = false
